--- a/themes/bookworm-light/layouts/_default/contact.html
+++ b/themes/bookworm-light/layouts/_default/contact.html
@@ -2,6 +2,9 @@
 
 <section class="section-sm">
   <div class="container">
+    <div class="justify-content-center text-center">
+      {{.Content}}
+    </div>
     <div class="row justify-content-center">
       <div class="col-8">
         <form action="{{site.Params.contact_form_action}}" method="post">
