--- a/themes/bookworm-light/layouts/partials/header.html
+++ b/themes/bookworm-light/layouts/partials/header.html
@@ -67,7 +67,7 @@
     <i class="las la-times text-primary"></i>
   </div>
   <form action="{{ `search`| relURL }}">
-    <input id="search-query" name="s" type="search" placeholder="Type words &amp; hit enter" class="text-center" aria-label="search-query">
+    <input id="search-query" name="s" type="search" placeholder="جستجو" class="text-center" aria-label="search-query">
   </form>
 </div>
 {{end}}
