--- a/themes/bookworm-light/layouts/_default/contact.html
+++ b/themes/bookworm-light/layouts/_default/contact.html
@@ -9,23 +9,23 @@
       <div class="col-8">
         <form action="{{site.Params.contact_form_action}}" method="post">
           <div class="mb-4">
-            <label for="name" class="form-label">Name:</label>
+            <label for="name" class="form-label">نام :</label>
             <input type="text" class="form-control" id="name" name="name" required>
           </div>
           <div class="mb-4">
-            <label for="email" class="form-label">Email:</label>
+            <label for="email" class="form-label">ایمیل :</label>
             <input type="email" class="form-control" id="email" name="email" required>
           </div>
           <div class="mb-4">
-            <label for="subject" class="form-label">Subject:</label>
+            <label for="subject" class="form-label">موضوع :</label>
             <input type="text" class="form-control" id="subject" name="subject" required>
           </div>
           <div class="mb-4">
-            <label for="message" class="form-label">Message:</label>
+            <label for="message" class="form-label">پیام :</label>
             <textarea class="form-control" id="message" rows="4" name="message" required></textarea>
           </div>
 
-          <button type="submit" class="btn btn-primary" aria-label="Send Message">Send Message</button>
+          <button type="submit" class="btn btn-primary" aria-label="Send Message">ارسال پیام</button>
         </form>
       </div>
     </div>
