--- a/themes/bookworm-light/assets/scss/_common.scss
+++ b/themes/bookworm-light/assets/scss/_common.scss
@@ -415,6 +415,8 @@ a.post-title:hover,
   code {
     margin-bottom: 0 !important;
     font-size: 100%;
+    direction: ltr;
+    text-align: left;
   }
 }
 
