--- a/themes/bookworm-light/layouts/_default/post.html
+++ b/themes/bookworm-light/layouts/_default/post.html
@@ -34,6 +34,6 @@
     </h3>
     <p dir="rtl" class="text-right">{{ .Plain | truncate 150 }}</p>
 
-    <!-- <a href="{{.Permalink}}" aria-label="More on {{.Title}}">Read More <i class="las la-angle-right"></i></a> -->
+    <a href="{{.Permalink}}" aria-label="More on {{.Title}}"><i class="las la-angle-left"></i>بیشتر بخوانید </a>
   </div>
 </article>
