--- a/themes/bookworm-light/layouts/_default/single.html
+++ b/themes/bookworm-light/layouts/_default/single.html
@@ -8,7 +8,7 @@
     <div class="row justify-content-center">
       <div class="col-lg-10">
         <div class="text-center mb-5">
-          <h3 class="h2 mb-4 post-title">{{.Title}}</h3>
+          <h3 dir="rtl" class="h2 mb-4 post-title text-right">{{.Title}}</h3>
           <ul class="card-meta list-inline">
             <li class="list-inline-item">
               <a href="#!" class="card-meta-author">
