--- a/themes/bookworm-light/layouts/_default/single.html
+++ b/themes/bookworm-light/layouts/_default/single.html
@@ -107,7 +107,7 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-10">
-        <div class="content">
+        <div dir="rtl" class="content text-right">
           {{.Content}}
         </div>
       </div>
