responsive video height

--- a/themes/bookworm-light/layouts/shortcodes/video.html
+++ b/themes/bookworm-light/layouts/shortcodes/video.html
@@ -15,7 +15,7 @@
       source: {{ .Get 0 }},
       mute: false,
       height: 360,
-      width: 640
+      width: '100%'
     });
   
     player.attachTo(playerElement);  
