--- a/themes/bookworm-light/layouts/partials/head.html
+++ b/themes/bookworm-light/layouts/partials/head.html
@@ -9,12 +9,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
 
   {{ if isset .Site.Params "twitter" }}
-  <meta name="twitter:card" content="{{ if .Params.featured_image }}summary_large_image{{else}}summary{{end}}">
+  <meta name="twitter:card" content="{{ if .Params.image }}summary_large_image{{else}}summary{{end}}">
   <meta name="twitter:title" content="{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Title }} &middot; {{ .Site.Title }}{{ end }}">
   <meta name="twitter:description" content="{{ if .IsHome }}{{ .Description }}{{ else }}{{ htmlEscape .Summary }}{{ end }}">
   <meta name="twitter:site" content="{{ .Site.Params.twitter }}">
   <meta name="twitter:creator" content="{{ .Site.Params.twitter }}">
-  {{ if .Params.featured_image }}<meta name="twitter:image" content="{{ .Params.featured_image }}">{{ end }}
+  {{ if .Params.image }}<meta name="twitter:image" content="{{ .Params.image }}">{{ end }}
 {{ end }}
 
 <meta property="og:locale" content="en_GB">
@@ -24,8 +24,8 @@
 <meta property="og:url" content="{{ .Permalink }}">
 <meta property="og:site_name" content="{{ .Site.Title }}">
 {{ if .Params.featured_image }}
-  <meta property="og:image" content="{{ .Params.featured_image }}">
-  <meta property="og:image:secure_url" content="{{ .Params.featured_image }}">
+  <meta property="og:image" content="{{ .Params.image }}">
+  <meta property="og:image:secure_url" content="{{ .Params.image }}">
 {{- end }}
 {{ range .Params.categories }}<meta property="article:section" content="{{ . }}">{{ end }}
 {{ if isset .Params "date" }}<meta property="article:published_time" content="{{ (time .Date).Format "2006-01-02T15:04:05Z" }}">{{ end }}
