fixed text-alighn in mobile view

--- a/themes/bookworm-light/layouts/author/list.html
+++ b/themes/bookworm-light/layouts/author/list.html
@@ -23,7 +23,7 @@
             </a></li>
           {{end}}
         </ul>
-        <p>{{- .Summary | truncate 100 -}} &nbsp; <a class="text-dark" href="{{.Permalink}}">Read More</a></p>
+        <p>{{- .Summary | truncate 100 -}} &nbsp; <a class="text-dark" href="{{.Permalink}}">بیشتر بخوانید</a></p>
       </div>
       {{end}}
     </div>
