change small style

--- a/themes/bookworm-light/assets/scss/_common.scss
+++ b/themes/bookworm-light/assets/scss/_common.scss
@@ -277,7 +277,7 @@ a.post-title:hover,
     list-style-type: none;
 
     li {
-      padding-left: 20px;
+      padding-right: 20px;
       position: relative;
 
       &::before {
@@ -287,7 +287,7 @@ a.post-title:hover,
         width: 8px;
         border-radius: 50%;
         background: $color-primary;
-        left: 3px;
+        right: 3px;
         top: 8px;
       }
     }
