added google analitics

--- a/themes/bookworm-light/layouts/partials/head.html
+++ b/themes/bookworm-light/layouts/partials/head.html
@@ -36,4 +36,6 @@
   {{ "<!-- CSS Plugins -->" | safeHTML}}
   {{ partialCached "style.html" . }}
 
+  <!--Google Analitics-->
+  {{ template "_internal/google_analytics.html" . }}
 </head>
